--- a/conf/extra/httpd-vhosts.conf
+++ b/conf/extra/httpd-vhosts.conf
@@ -21,21 +21,19 @@
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
 <VirtualHost *:8888>
-    ServerAdmin webmaster@dummy-host.example.com
+    ServerAdmin morehousej09@gmail.com
     DocumentRoot "/usr/local/apache2/docs/dummy-host.example.com"
-    ServerName dummy-host.example.com
-    ServerAlias www.dummy-host.example.com
-    ErrorLog "logs/dummy-host.example.com-error_log"
-    CustomLog "logs/dummy-host.example.com-access_log" common
+    ServerName prospero
+    ServerAlias prospero
 </VirtualHost>
 
-<VirtualHost *:8888>
-    ServerAdmin webmaster@dummy-host2.example.com
-    DocumentRoot "/usr/local/apache2/docs/dummy-host2.example.com"
-    ServerName dummy-host2.example.com
-    ErrorLog "logs/dummy-host2.example.com-error_log"
-    CustomLog "logs/dummy-host2.example.com-access_log" common
-</VirtualHost>
+# <VirtualHost *:8888>
+#     ServerAdmin webmaster@dummy-host2.example.com
+#     DocumentRoot "/usr/local/apache2/docs/dummy-host2.example.com"
+#     ServerName dummy-host2.example.com
+#     ErrorLog "logs/dummy-host2.example.com-error_log"
+#     CustomLog "logs/dummy-host2.example.com-access_log" common
+# </VirtualHost>
 
 
 
