--- a/conf/original/httpd.conf
+++ b/conf/original/httpd.conf
@@ -49,7 +49,7 @@ ServerRoot "/usr/local/apache2"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 8888
+Listen 80
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -106,8 +106,10 @@ LoadModule log_config_module modules/mod_log_config.so
 #LoadModule log_debug_module modules/mod_log_debug.so
 #LoadModule logio_module modules/mod_logio.so
 LoadModule env_module modules/mod_env.so
+#LoadModule mime_magic_module modules/mod_mime_magic.so
 #LoadModule expires_module modules/mod_expires.so
 LoadModule headers_module modules/mod_headers.so
+#LoadModule usertrack_module modules/mod_usertrack.so
 #LoadModule unique_id_module modules/mod_unique_id.so
 LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule version_module modules/mod_version.so
@@ -186,7 +188,7 @@ ServerAdmin you@example.com
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-#ServerName www.example.com:8888
+#ServerName www.example.com:80
 
 #
 # Deny access to the entirety of your server's filesystem. You must
