--- a/sites-available/prospero.conf
+++ b/sites-available/prospero.conf
@@ -2,15 +2,14 @@
 	ServerAdmin morehousej09@gmail.com
     ServerName prospero
 
-	DocumentRoot /Users/MorehouseJ09/Documents/production_development/prospero/current
+	DocumentRoot /home/ubuntu/prospero
 
-	<Directory "/Users/MorehouseJ09/Documents/production_development/prospero/current">
-	    RewriteEngine On
+	<Directory "/home/ubuntu/prospero">
+		RewriteEngine On
 		Options Indexes FollowSymLinks
 		AllowOverride All
-		# AuthConfig FileInfo
 		Order allow,deny
-    	Allow from all
+	    	Allow from all
 		Require all granted
 	</Directory>
 
