Updated project files for flashquest file

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -32,7 +32,7 @@ ServerAdmin morehousej09@gmail.com
 Listen 8888
 ServerName localhost
 
-include /usr/local/apache2/sites-enabled/*
+Include /usr/local/apache2/sites-enabled/*
 
 <Directory />
     AllowOverride None
